--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body {
     font-weight: 600;
     font-size: 18px;
     line-height: 25px;
+    margin: 0;
+    padding: 0;
 }
 
 .navbar {
@@ -41,12 +43,112 @@ body {
     height: 25px;
 }
 
-.navbar_button > a {
+.navbar_button>a {
     text-decoration: none;
     color: #1F1E1E;
 }
 
-.navbar_button > a:hover {
+.navbar_button>a:hover {
     text-decoration: none;
     color: #BC3324;
+}
+
+.main_section {
+    
+}
+
+.main_section_logo {
+    position: absolute;
+    width: 100%;
+    height: 325px;
+    left: 0px;
+    top: 375px;
+}
+
+footer {
+    position: absolute;
+    width: 1000px;
+    height: 360px;
+    left: 293px;
+    bottom: 0;
+    /* Ставим меньше отступ, чтобы не долго не листать пустую страницу */
+    top: 1700px;
+}
+
+.footer_logo_parent {
+    position: absolute;
+    width: 296.16px;
+    height: 22px;
+    right: 1px;
+    bottom: -1px;
+}
+
+.footer_logo_img {
+    position: absolute;
+    width: 56px;
+    height: 17px;
+    right: 2px;
+    bottom: 2px;
+}
+
+.footer_logo_text {
+    position: absolute;
+    width: 210px;
+    height: 22px;
+    left: calc(50% - 210px/2 - 27.08px);
+    bottom: 1px;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 22px;
+    display: flex;
+    align-items: center;
+    text-align: right;
+}
+
+.footer_links_box {
+    position: absolute;
+    width: 230px;
+    height: 198px;
+    left: 0px;
+    top: 0px;
+}
+
+.links_list_main>li>a {
+    text-decoration: none;
+    color: #1F1E1E;
+}
+
+.links_list_main>li {
+    list-style-type: none;
+    width: 204px;
+    height: 22px;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 22px;
+    display: flex;
+    align-items: center;
+}
+
+.links_list_main>ul {
+    margin-left: 0;
+    padding-left: 0;
+}
+
+.links_list_main>li>a:hover {
+    text-decoration: none;
+    color: #BC3324;
+}
+
+.links_line {
+    position: absolute;
+    width: 4px;
+    height: 198px;
+    left: 4px;
+    top: 0px;
+    background: #BC3324;
+    transform: rotate(-180deg);
 }
