--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,59 +1,246 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
-/* Все ниже Глава 1. */
+
+.btn {
+    display: inline-block;
+    box-sizing: border-box;
+    padding: 15px 40px;
+    border: 1px solid #1F1E1E;
+    background-color: transparent;
+    outline: none;
+    color: #1F1E1E;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 20px;
+    text-align: center;
+    text-decoration: none;
+    transition: color 0.2s, background-color 0.2s, border-color 0.2s;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: #1F1E1E;
+    color: #ffffff;
+}
 
 body {
+    box-sizing: border-box;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 1920px;
+    min-height: 100vh;
+    padding-top: 147px;
     color: #1F1E1E;
-    font-family: 'Open Sans';
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: "Open Sans", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
     font-style: normal;
+    line-height: 1.375;
+}
+
+.page-header {
+    position: absolute;
+    top: 0px;
+    left: 0;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 147px;
+    background-color: rgba(222, 222, 222, 0.98);
+    z-index: 100;
+}
+
+@supports (backdrop-filter: blur(20px)) {
+    .page-header {
+        background-color: rgba(222, 222, 222, 0.5);
+        backdrop-filter: blur(20px);
+    }
+}
+
+.page-header__container {
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    max-width: 1414px;
+    margin: 0 auto;
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
+.page-header__logo {
+    flex-shrink: 0;
+    width: 202px;
+    height: 147px;
+    font-size: 0;
+    text-decoration: none;
+}
+
+.page-header__logo-icon {
+    width: 100%;
+    height: 100%;
+}
+
+.page-header__nav {
+    display: flex;
+    align-items: baseline;
+    margin: 0 auto;
+}
+
+.page-header__nav-link {
+    margin: 0 25px;
+    color: #1F1E1E;
+
     font-weight: 600;
     font-size: 18px;
     line-height: 25px;
-    margin: 0;
-    padding: 0;
-}
-
-.navbar {
-    position: absolute;
-    height: 147px;
-    left: 0px;
-    right: 0px;
-    top: 0px;
-    background: rgba(222, 222, 222, 0.5);
-}
-
-.navbar_buttons_parent {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: flex-start;
-    padding: 0px;
-    gap: 50px;
-
-    position: absolute;
-    width: 457px;
-    height: 25px;
-    left: calc(50% - 457px/2 + 0.5px);
-    top: 61px;
-}
-
-
-.navbar_button {
-    flex: none;
-    order: 0;
-    flex-grow: 0;
-    height: 25px;
-}
-
-.navbar_button>a {
     text-decoration: none;
-    color: #1F1E1E;
+    transition: color 0.2s;
 }
 
-.navbar_button>a:hover {
-    text-decoration: none;
+.page-header__nav-link:hover {
     color: #BC3324;
 }
+
+.page-header__right-block {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 202px;
+}
+
+.main {
+    padding-top: 100px;
+    flex: 1 0 auto;
+}
+
+.section-title {
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    max-width: 624px;
+    min-height: 62px;
+    margin: 0 auto 150px;
+    padding: 8px 45px;
+    background-color: #1F1E1E;
+    color: #ffffff;
+    font-family: "Lora", serif;
+    font-weight: 500;
+    font-size: 36px;
+    line-height: 1.277;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.event-card {
+    display: flex;
+    width: 405px;
+    max-width: 100%;
+    min-width: 280px;
+}
+
+.event-card__link {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    color: #1F1E1E;
+    text-decoration: none;
+}
+
+.event-card__link:hover .event-card__title {
+    color: #BC3324;
+    text-decoration-color: #BC3324;
+}
+
+.event-card__picture {
+    display: block;
+    position: relative;
+    width: 100%;
+    margin: 0 0 25px;
+    font-size: 0;
+    text-decoration: none;
+    overflow: hidden;
+}
+
+.event-card__picture::after {
+    content: "";
+    display: block;
+    width: 100%;
+    padding-top: 107.16%;
+}
+
+.event-card__img {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.event-card__title {
+    margin: 0 0 15px;
+    min-height: 66px;
+    color: #1F1E1E;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 33px;
+    text-decoration: underline transparent;
+    transition: color 0.2s, text-decoration-color 0.2s;
+}
+
+.event-card__description {
+    margin: 0 0 auto;
+    font-size: 16px;
+    line-height: 22px;
+}
+
+.event-card__time {
+    margin: 15px 0 0;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 19px;
+}
+
+.listing {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 1414px;
+    margin: 0 auto;
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
+.listing__events-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 -30px -120px;
+}
+
+.listing__event-card {
+    width: calc(33.3333% - 60px);
+    margin: 0 30px 120px;
+}
+
+.events {
+    padding: 140px 0 100px;
+}
+
+.events__listing {
+    margin-bottom: 100px;
+}
+
 
 .main_section_logo {
     position: absolute;
@@ -155,6 +342,7 @@ footer {
     position: absolute;
     top: 150px
 }
+
 /* Глава 1 заканчивается здесь. */
 
 /* Глава 2. */
